<resources>
    <string name="app_name">diabetesCompanion</string>
    <string name="action_history">Show History</string>
    <string name="action_reminder">Set a Reminder</string>
    <string name="action_init">Initialize parameters</string>
    <string name="action_bollus">Calculate </string>
    <string name="bolus_val">0</string>
    <string name="bolus_label">Bolus:   </string>
    <string name="currentSugar">Current sugar Level</string>
    <string name="mealCarbo">Amount of Carbohydrates</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_Sugar">Sugar level:  </string>
    <string name="prompt_Carbo">Carbohydrates:  </string>
    <string name="action_save">SAVE</string>
    <string name="claculate">calculate</string>
    <string name="prompt_Comment">Comment: </string>
    <string name="generate_pdf_report">Generate PDF Report</string>
    <string name="reset_database">Reset Database</string>
    <string name="exit">Exit</string>
    <string name="action_delete">Delete Table Entry</string>
    <string name="correction_factor">correction factor</string>
    <string name="carbo_insulin_ratio">carbo/insulin ratio</string>
    <string name="sugar_level_target">Sugar Level Target</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="value">Value:</string>
    <string name="save_initialization_data">Save Initialization Data</string>
    <string name="e_mail">e-mail :</string>
    <string name="patient_name">Patient Name :</string>
    <string name="display_initial_value">Display Initial Value</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="sugar_target">Sugar Target</string>
    <string name="correct_factor">Correct. Factor</string>
    <string name="carbo_ins_ratio">Carbo/Ins ratio</string>
    <string name="initialization_page">----- INITIALIZATION PAGE -----</string>
    <string name="reset">Reset</string>
    <string name="H_date">Date</string>
    <string name="H_time">Time</string>
    <string name="H_sugar">Sugar</string>
    <string name="H_carbo">Carbo</string>
    <string name="H_bolus">Bolus</string>
    <string name="H_comment">Comment</string>
    <string name="H_sug">Sug.</string>
    <string name="Dtitle">Delete entry</string>
    <string name="Dmessage">Are you sure you want to delete this entry?</string>
    <string name="select_entry_to_delete">Select Entry to delete:</string>
    <string name="H_boluss">Suggest</string>
    <string name="toast_invalidInput">Invalid inputs! data was not saved.</string>
    <string name="promt_insulin">Units of insulin taken?</string>
    <string name="toast_low_sugar">LOW SUGAR! no bollus calculation.</string>
    <string name="this_is_the_main_application_logo">This is the main Application Logo</string>
    <string name="comnt">Comnt</string>
    <string name="PDFtitle">"Sugar Level Report for "</string>
    <string name="PDFgenerated">"Report generated on: "</string>
    <string name="PDFnotice">This document was generated automatically by DiabetesCompanion.</string>
    <string name="title_activity_diabetes_plot">DiabetesPlot</string>
    <string name="action_plot">show Graph</string>
    <string name="title_activity_diabetes_graph">DiabetesGraphActivity</string>
    <string name="ChartHeader">Sugar level Chart</string>
    <string name="GraphLabel">Normal Sugar range</string>
    <string name="GraphLabel2">Sugar Level</string>
    <string name="CovError1">Carbo/Insulin ratio data is not covering 24 hours! Data not saved.</string>
    <string name="CovError2">Correction Factor data is not covering 24 hours! Data not saved.</string>
    <string name="CovError3">Sugar Tagets is not covering 24 hours! Data not saved.</string>
    <string name="close">Close</string>
    <string name="action_help">Help</string>
    <string name="title_activity_run_intro">RunIntro</string>
    <string name="Intro0">This application is designed for Type 1 diabetes patients that inject insuling regurarly. \n
        The application helps determine how many insulin units to inject based on the current sugar level and the amount of carbohidrates consumed.\n
        The user should initaialize the application with his personal data so that the bolus calculation is calibrated to his specific profile.
        </string>
    <string name="Intro0_header">Diabetes Companion Help</string>
    <string name="Intro1_header">Bolus Calculation and storing data</string>
    <string name="Intro1">The user should type in the appropriate fields, the current sugar level and carbohydrates (optionaly adding a short comment).
    Pressing the Calc button displays the suggested Bolus value. Pressing the "save" button promts the user to enter the actual amount of insuling injected
        and saves the data in the the history table.  </string>
    <string name="Intro2">The initialization screen is where you set your personal data (the application stores the information until you decide to change it).\n
    You set the values for the following parameters:\n
        carbo/Ins Ratio - this is the amount of carbohydrates (in grams) covered by 1 unit of insulin (typical numbers 1-15) \n
        Correction Factor - the amount by which your blood glucose is reduced by one unit of insulin in a period of two to four hours(typical: 30-50 mg/dl)\n
        Sugar Target - The desired target for your sugar level
    </string>
    <string name="Intro2_header">Initialization</string>
    <string name="Intro3_header">Initialization (cont..)</string>
    <string name="Intro3">bla bla</string>
    <string name="Intro4_header">Other Operations</string>
    <string name="Intro4">These are additional operations</string>

</resources>
