<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ashervardi.diabetesapp2.MainActivity">

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_save"
        android:title="@string/action_save"
    app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_init"
        android:title="@string/action_init"
        app:showAsAction="never"/>
    <item android:id="@+id/action_history"
    android:title="@string/action_history"
    app:showAsAction="never"/>
    <item android:id="@+id/action_pdf"
    android:title="Generate PDF Report"
    app:showAsAction="never"/>

    <item android:id="@+id/action_reset"
        android:title="Reset Database"
        app:showAsAction="never"/>

    </menu>
