<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ashervardi.diabetesapp2.InitDataActivity"
    tools:showIn="@layout/activity_main">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">


        <TextView
            android:text="@string/bolus_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bolusLabel"
            android:layout_weight="1"
            android:textSize="36sp" />

        <TextView
            android:text="@string/bolus_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bolusVal"
            android:layout_weight="3"
            tools:textDirection="rtl"
            android:textSize="36sp" />


        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />


    </LinearLayout>


    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#50035f"
        android:id="@+id/separator2"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/separator"
        android:background="#50035f"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/diabetes"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:scaleX="1.2"
        android:scaleY="0.8"
        android:layout_alignParentTop="false"
        android:adjustViewBounds="false"
        android:layout_alignParentStart="false" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/tableLO2"
        android:layout_below="@+id/tableLO"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="22dp"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/prompt_Sugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="4"
                android:id="@+id/currentSugarLevel"
                android:visibility="visible"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:gravity="start"
                android:padding="2dp"
                android:background="@color/light_yellow"
                android:textSize="18sp"
                android:layout_margin="4dp" />
        </TableRow>

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/prompt_Carbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:visibility="visible"
            android:id="@+id/carbo"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:gravity="left"
            android:layout_below="@id/currentSugarLevel"
            android:layout_alignParentStart="true"
            android:padding="2dp"
            android:background="@color/light_yellow"
            android:textSize="18sp"
            android:layout_margin="4dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/prompt_Comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:visibility="visible"
                android:id="@+id/comment"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                android:textColorHint="@color/medium_green"
                android:gravity="left"
                android:layout_alignParentStart="true"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:background="@color/light_red"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcButton"
        android:elevation="5dp"
        style="@android:style/Widget.Button.Small"
        android:layout_marginEnd="24dp"
        android:layout_alignTop="@+id/tableLO2"
        android:layout_alignParentEnd="true"
        android:text="@string/claculate"/>
    <Button
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:layout_below="@+id/calcButton"
        android:layout_alignParentEnd="true"
        android:textColor="@color/red" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:id="@+id/tableLO"
        android:layout_below="@+id/separator2"
        android:layout_alignParentStart="true">



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="carbo/insulin ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="18sp" />

            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:id="@+id/carboInsulinRatio"
                android:layout_margin="2dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="correction factor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="18sp" />
            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:id="@+id/correctionFactor"
                android:layout_margin="2dp"
                android:textSize="18sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Sugar Level Target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="18sp" />
            <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:id="@+id/sugarTarget"
                android:layout_margin="2dp"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>




</RelativeLayout>
    </ScrollView>
